// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DebugPanel Component Tests > renders radio buttons for search sources 1`] = `
<div
  class="sc-irLvIq hkeVyu"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-csKJxZ ilyJmt"
  >
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        checked=""
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-llamaindex"
        type="radio"
        value="llamaindex"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab LlamaIndex Search
      </span>
    </label>
  </div>
</div>
`;

exports[`DebugPanel Component Tests > selects no radio button when VITE_SEARCH_SOURCE has a bad value 1`] = `
<div
  class="sc-irLvIq hkeVyu"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-csKJxZ ilyJmt"
  >
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-llamaindex"
        type="radio"
        value="llamaindex"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab LlamaIndex Search
      </span>
    </label>
  </div>
</div>
`;

exports[`DebugPanel Component Tests > selects the "AI Lab LlamaIndex" radio button when VITE_SEARCH_SOURCE is llamaindex 1`] = `
<div
  class="sc-irLvIq hkeVyu"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-csKJxZ ilyJmt"
  >
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        checked=""
        data-testid="search-source-llamaindex"
        type="radio"
        value="llamaindex"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab LlamaIndex Search
      </span>
    </label>
  </div>
</div>
`;

exports[`DebugPanel Component Tests > selects the "Azure AI" radio button when VITE_SEARCH_SOURCE is azure 1`] = `
<div
  class="sc-irLvIq hkeVyu"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-csKJxZ ilyJmt"
  >
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        checked=""
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-llamaindex"
        type="radio"
        value="llamaindex"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab LlamaIndex Search
      </span>
    </label>
  </div>
</div>
`;
